# mini_trantor

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  log  plan.md  plan2.md
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: mini_trantorConfig.cmake.in
docs/: core_module_change_gate.md  doc_directory.md  framework_understanding.md  mini_net_remediation_checklist.md  mini_tcp_lifecycle.md  mini_timer_queue_lifecycle.md  roadmap.md  rpc.md  threading_and_coro_change_summary.md  when_all_when_any_code_explanation.md
docs/00_overview/: 00_project_summary.md  01_architecture_overview.md  02_module_map.md  03_thread_model.md  04_reactor_model.md  05_coroutine_model.md
docs/01_callflow/: 01_tcp_server_start.md  02_new_connection_flow.md  03_message_receive_flow.md  04_message_send_flow.md  05_connection_close_flow.md  06_tcp_client_connect_flow.md  07_timer_trigger_flow.md  08_coroutine_resume_flow.md
docs/04_design/: 01_reactor_design.md  02_buffer_design.md  03_connection_lifecycle.md  04_coroutine_design.md  05_threading_model.md
docs/05_issues/: 01_code_smells.md  02_design_problems.md  03_possible_bugs.md
docs/06_rewrite/: 01_minimal_reactor.md  02_minimal_tcp_server.md  03_coroutine_bridge.md  04_tcp_connection_decomposition.md
docs/07_ai_prompts/: bug_analysis.md  callflow_analysis.md  class_analysis.md  refactor_analysis.md  test_analysis.md
examples/coroutine_echo_server/: main.cpp
examples/echo_server/: main.cpp
intents/architecture/: lifetime_rules.intent.md  system_overview.intent.md  threading_model.intent.md  v1_stages.intent.md  v2_stages.intent.md  v3_stages.intent.md  v5_delta_config_observability.intent.md  v5_stages.intent.md  v6_stages.intent.md
intents/modules/: acceptor.intent.md  async_semantics.intent.md  async_timer.intent.md  backpressure_policy.intent.md  buffer.intent.md  channel.intent.md  connection_awaiter_registry.intent.md  connection_backpressure_controller.intent.md  connection_transport.intent.md  connector.intent.md  coroutine_task.intent.md  dns_resolver.intent.md  event_loop.intent.md  event_loop_thread.intent.md  event_loop_thread_pool.intent.md  graceful_shutdown.intent.md  http.intent.md  poller.intent.md  rpc.intent.md  tcp_client.intent.md  tcp_connection.intent.md  tcp_server.intent.md  timer_queue.intent.md  tls.intent.md  websocket.intent.md  when_all.intent.md  when_any.intent.md
intents/usecases/: echo_server.intent.md
mini/base/: Logger.cc  Logger.h  MetricsHook.h  Timestamp.h  noncopyable.h
mini/coroutine/: CancellationToken.h  ResolveAwaitable.h  SleepAwaitable.h  Task.h  Timeout.h  WhenAll.h  WhenAny.h
mini/http/: HttpContext.cc  HttpContext.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  HttpServer.cc  HttpServer.h
mini/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  ConnectorOptions.h  DnsResolver.cc  DnsResolver.h  DnsResolverOptions.h  EPollPoller.cc  EPollPoller.h  EventLoop.h  (+29 more)
rules/: coding_rules.md  framework-understanding-doc.md  ownership_rules.md  review_rules.md  testing_rules.md  thread_affinity_rules.md
src/: Channel.cpp  EventLoop.cpp  Poller.h  main.cpp
tests/: CMakeLists.txt  README.md  test_buffer.cpp  test_buffer_dbg  test_event_loop.cpp  test_poller_contract.cpp  test_tcp_connection.cpp
tests/certs/: ca.crt  ca.key  generate_test_certs.sh  server.crt  server.key
tests/contract/acceptor/: test_acceptor.cpp
tests/contract/buffer/: test_buffer_contract.cpp
tests/contract/channel/: test_channel_contract.cpp
tests/contract/connector/: test_connector.cpp
tests/contract/coroutine/: test_cancellation_contract.cpp  test_combinator_contract.cpp  test_sleep_awaitable.cpp  test_timeout_contract.cpp
tests/contract/dns/: test_dns_contract.cpp
tests/contract/event_loop/: test_event_loop.cpp
tests/contract/event_loop_thread/: test_event_loop_thread.cpp
tests/contract/event_loop_thread_pool/: test_event_loop_thread_pool.cpp
tests/contract/http/: test_http_server.cpp
tests/contract/net/: test_metrics_hook_contract.cpp  test_options_contract.cpp
tests/contract/rpc/: test_rpc_server.cpp
tests/contract/signal/: test_signal_handling.cpp
tests/contract/tcp_client/: test_tcp_client.cpp  test_tcp_client_ipv6.cpp
tests/contract/tcp_connection/: test_tcp_connection.cpp
tests/contract/tcp_server/: test_shutdown_ordering.cpp  test_tcp_server.cpp
tests/contract/timer_queue/: test_timer_queue.cpp
tests/contract/tls/: test_tls_handshake.cpp
tests/contract/ws/: test_ws_server.cpp
tests/integration/coroutine/: test_coroutine_echo_server.cpp  test_coroutine_idle_timeout.cpp  test_timeout_race.cpp
tests/integration/dns/: test_dns_client.cpp
tests/integration/http/: test_http_server.cpp
tests/integration/rpc/: test_rpc.cpp
tests/integration/tcp_client/: test_tcp_client.cpp
tests/integration/tcp_server/: test_graceful_shutdown.cpp  test_tcp_server.cpp  test_tcp_server_backpressure.cpp  test_tcp_server_backpressure_policy.cpp  test_tcp_server_idle_timeout.cpp  test_tcp_server_ipv6.cpp  test_tcp_server_threaded.cpp
tests/integration/timer_queue/: test_timer_queue_integration.cpp
tests/integration/tls/: test_tls_echo.cpp
tests/integration/ws/: test_ws_server.cpp
tests/unit/acceptor/: test_acceptor_stop.cpp
tests/unit/buffer/: test_buffer.cpp
tests/unit/channel/: test_channel.cpp
tests/unit/connector/: test_connector.cpp
tests/unit/coroutine/: test_cancellation_token.cpp  test_sleep_awaitable.cpp  test_task.cpp  test_when_all.cpp  test_when_any.cpp
tests/unit/dns/: test_dns_resolver.cpp
tests/unit/event_loop_thread_pool/: test_thread_pool_stop.cpp
tests/unit/http/: test_http_context.cpp  test_http_request.cpp  test_http_response.cpp
tests/unit/net/: test_connection_awaiter_registry.cpp  test_connection_backpressure_controller.cpp  test_connection_transport.cpp  test_inet_address_ipv6.cpp
tests/unit/rpc/: test_rpc_codec.cpp
tests/unit/timer_queue/: test_timer_id.cpp
tests/unit/tls/: test_tls_context.cpp
tests/unit/ws/: test_ws_codec.cpp  test_ws_handshake.cpp
(+60 files in other folders)
